# binance

./: .env.example  .gitignore  README.md  Setup_S3_Notifications_Dockerfile  docker-compose.yml  pyproject.toml
binance_dbt/: dbt_project.yml  profiles.yml
binance_dbt/models/: klines_rmt_5min.sql  sources.yml
data_exploration/: binance_klines_stream.py  binance_ticker_stream.py
resources/scripts/: setup-s3-notifications.sh
resources/sql/: klines.sql
resources/sqs_config/: notification-config.json
src/common/: logging.py
src/common/dao/: klines_dao.py
src/dao/: klines_dao.py
src/extractor_process/: config.py  main.py  main_w_params.py
src/extractor_process/formatter/: base_formatter.py  klines_to_parquet_formatter.py
src/extractor_process/s3_writer/: s3_writer.py
src/extractors/: get_binance_exchange_info.py  get_klines.py
src/extractors/batching/: get_binance_exchange_info.py  get_klines.py
src/extractors/streaming/: get_binance_exchange_info.py
src/loader_process/: main.py
src/loader_process/loaders/: base_loader.py  clickhouse_loader.py
src/loader_process/s3_reader/: s3_reader.py
src/loader_process/sqs_reader/: sqs_reader.py
src/models/: binance_exchange_info.py  binance_klines.py
src/models/database_level/: binance_klines.py  binance_stream_exchange_info.py  binance_stream_klines.py
src/models/service_level/: binance_exchange_info.py  binance_filters.py  binance_klines.py  binance_rate_limit.py  binance_stream_exchange_info.py  binance_stream_klines.py
src/tables/: klines.py
(+16 files in other folders)
