[tool.poetry]
name = "binance-pipeline"
version = "0.1.0"
description = ""
authors = ["eugeneleejunping <eugeneleejunping@gmail.com>"]
readme = "README.md"
packages = [
    { include = "loader_process", from = "src" },
    { include = "extractor_process", from = "src" },
    { include = "common", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
sqlalchemy = "2.0.30"
aiohttp = "^3.9.5"
clickhouse-connect = "^0.8.17"
clickhouse-sqlalchemy = "^0.3.2"
tenacity = "^9.1.2"

[tool.poetry.dev-dependencies]
ruff = "^0.4.8"
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-asyncio-cooperative = "^0.37.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "clickhouse_sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
